--- a/package.json
+++ b/package.json
@@ -39,7 +39,13 @@
     "rollup": "^2.26.3",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.3",
-    "rollup-plugin-terser": "^7.0.0"
+    "rollup-plugin-terser": "^7.0.0",
+    "workbox-background-sync": "^5.1.3",
+    "workbox-core": "^5.1.3",
+    "workbox-precaching": "^5.1.3",
+    "workbox-routing": "^5.1.3",
+    "workbox-strategies": "^5.1.3",
+    "workbox-sw": "^5.1.3"
   },
   "eslintConfig": {
     "extends": "eslint-config-postcss"
