--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss": "^7.0.32",
     "ramda": "^0.27.1",
     "rollup": "^2.26.3",
+    "rollup-plugin-multi-input": "^1.1.1",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.3",
     "rollup-plugin-terser": "^7.0.0",
