--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-ramda": "^2.5.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-standard": "^4.0.1",
+    "html-minifier": "^4.0.0",
     "mocha": "^8.1.1",
     "nyc": "^15.1.0",
     "postcss": "^7.0.32",
