--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mocha": "^8.1.1",
     "nyc": "^15.1.0",
     "postcss": "^7.0.32",
+    "postcss-load-config": "^2.1.0",
     "ramda": "^0.27.1",
     "rollup": "^2.26.3",
     "rollup-plugin-multi-input": "^1.1.1",
