:wrench: Add config for transforming Fragment in JSX

--- a/babel.config.json
+++ b/babel.config.json
@@ -3,7 +3,8 @@
     [
       "@babel/plugin-transform-react-jsx",
       {
-        "pragma": "h"
+        "pragma": "h",
+        "pragmaFrag": "Fragment"
       }
     ]
   ]
