--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.10.4",
     "@logux/eslint-config": "^40.0.3",
+    "@rollup/plugin-babel": "^5.2.0",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "chai": "^4.2.0",
