--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rollup-plugin-multi-input": "^1.1.1",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.3",
+    "rollup-plugin-postcss": "^3.1.6",
     "rollup-plugin-terser": "^7.0.0",
     "workbox-background-sync": "^5.1.3",
     "workbox-core": "^5.1.3",
