--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@rollup/plugin-babel": "^5.2.0",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "autoprefixer": "^9.8.6",
     "chai": "^4.2.0",
     "chai-arrays": "^2.2.0",
     "chai-match": "^1.1.1",
     "chalk": "^4.1.0",
+    "cssnano": "^4.1.10",
     "eslint": "^7.7.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-chai-expect": "^2.2.0",
@@ -38,7 +40,12 @@
     "mocha": "^8.1.1",
     "nyc": "^15.1.0",
     "postcss": "^7.0.32",
+    "postcss-import": "^12.0.1",
     "postcss-load-config": "^2.1.0",
+    "postcss-momentum-scrolling": "^2.8.20",
+    "postcss-nested": "^4.2.3",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-sort-media-queries": "^1.7.26",
     "ramda": "^0.27.1",
     "rollup": "^2.26.3",
     "rollup-plugin-multi-input": "^1.1.1",
