--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "idb": "^5.0.4",
     "normalize.css": "^8.0.1",
     "preact": "^10.4.7"
   },
