--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postcss-momentum-scrolling": "^2.8.20",
     "postcss-nested": "^4.2.3",
     "postcss-preset-env": "^6.7.0",
+    "postcss-simple-vars": "^5.0.2",
     "postcss-sort-media-queries": "^1.7.26",
     "ramda": "^0.27.1",
     "rollup": "^2.26.3",
