--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chalk": "^4.1.0",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
+    "eleventy-plugin-pwa": "^1.0.8",
     "eslint": "^7.7.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-chai-expect": "^2.2.0",
